# juli

./: Cargo.toml  LICENSE-MIT.md
src/: cli.rs  juli.rs  main.rs
src/plugins/: bropages.rs  cheat_sh.rs  cheatsheets.rs  commandlinefu.rs  eg.rs  gitpull.rs  mod.rs  tldr.rs
